js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-no-new-call-expression-prop-access.js







































$DONOTEVALUATE();

async function f() {
  new import('').prop;
}

